2017-12-15  Sam Steingold  <sds@gnu.org>

	Most of the PARI interface functions are generated automatically.
	* modules/pari/desc2lisp.lisp: New file, read
	$datadir/pari/pari.desc and emi pari-call-out forms.
	* modules/pari/pari.lisp: Remove most of pari-call-out forms and
	use desc2lisp to interface to most of the GP functions.

2017-12-15  Bruno Haible  <bruno@clisp.org>

	Control configure failure.
	* configure: Use explicit failure test for the ${MAKE} commands.

2017-12-11  Sam Steingold  <sds@gnu.org>

	* modules/regexp/regexp.lisp (regexp-split): Respect the :END argument.

2017-12-08  Sam Steingold  <sds@gnu.org>

	Ensure that all positional args are in *ARGS* when compiling.
	* spvw.d (push_to_args): Extract from ...
	(main_actions): Call push_to_args() on argv_execute_args when
	compiling in addition to when scripting
	* makemake.in (check-script): Test that.

2017-12-07  Jerry James  <loganjerry@gmail.com>
	    Sam Steingold  <sds@gnu.org>

	Avoid -Wunsequenced / -Wsequence-point warnings (subsumes patch#54).
	* modules/clx/new-clx/clx.f (STANDARD_XID_OBJECT_LOOK)
	(STANDARD_PTR_OBJECT_LOOK): Avoid multiple popSTACK()s in a single
	expression by creating a separate statement for each.
	* modules/rawsock/rawsock.c (RAWSOCK:GETADDRINFO): Likewise.
	* modules/syscalls/calls.c (POSIX:MKNOD): Likewise.

2017-12-06  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (handle_fault_range) [!(GENERATIONAL_GC & SPVW_MIXED)]:
	Expand non-trivially to avoid -Wunused-parameter.

2017-12-06  Sam Steingold  <sds@gnu.org>

	* makemake.in (LIBS): Add LIBUNISTRING like LIBSIGSEGV. Fix bug#719.

2017-12-06  Sam Steingold  <sds@gnu.org>

	Make sure the Darwin foo.dSYM directories are removed by clean et al.
	* makemake.in (exefiles, EXERM): New variables.
	Used throughout to ensure removal of .dSYM. Cf. patch#50.

2017-12-05  Ken Brown  <kbrown@cornell.edu>

	* encoding.d (encoding_from_name) [UNIX_CYGWIN]: Use Unix line
	endings (patch#47).
